--- a/frappe_pwa/public/css/alerts.css
+++ b/frappe_pwa/public/css/alerts.css
@@ -37,7 +37,7 @@
 
 .alert-success {
   color: #98d85b;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255);
   border-color: #98d85b;
 }
 
