:sparkles: Update year, install button and FR i18n
Signed-off-by: mathieu.brunot <mathieu.brunot@monogramm.io>

--- a/frappe_pwa/public/css/pwa-alerts.css
+++ b/frappe_pwa/public/css/pwa-alerts.css
@@ -150,3 +150,7 @@
 #pwa-alert-container .pwa-desk-alert .pwa-next-action-container .pwa-next-action:last-child {
   border-right: none;
 }
+
+.btn-pwa-install {
+  display: none;
+}
